[metadata]
name = chaikin
version = 0.0.6
author = Jean Lucas
author_email = jeanlpf@hotmail.com
description = Package for smoothing 2D coordinates using Chaikin's algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jean-lucas/chaikin
project_urls =
    Bug Tracker = https://github.com/jean-lucas/chaikin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
