[bdist_wheel]
universal = 0

[metadata]
name = chaikin
version = 0.0.8
author = Jean Lucas
author_email = jeanlpf@hotmail.com
description = Package for smoothing 2D coordinates using Chaikin's algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jean-lucas/chaikin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
